[gd_scene load_steps=7 format=3 uid="uid://baxq3x3n5p8g7"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_0tg6k"]
[ext_resource type="Script" path="res://scripts/components/HealthComponent.gd" id="2_mvj4l"]
[ext_resource type="Script" path="res://scripts/components/MovementComponent.gd" id="3_k7p9w"]
[ext_resource type="Script" path="res://scripts/components/StatsComponent.gd" id="4_x8c2g"]
[ext_resource type="Script" path="res://scripts/components/WeaponComponent.gd" id="5_h3n7s"]
[ext_resource type="Script" path="res://scripts/components/HurtboxComponent.gd" id="6_m8r4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k3x7"]
size = Vector2(20, 20)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_player"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8n5m2"]
size = Vector2(20, 20)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0tg6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1k3x7")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
texture = SubResource("PlaceholderTexture2D_player")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_mvj4l")
max_health = 100
invulnerability_duration = 0.5

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_k7p9w")
base_speed = 200.0
dash_speed = 400.0
dash_duration = 0.2

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("4_x8c2g")

[node name="WeaponComponent" type="Node" parent="."]
script = ExtResource("5_h3n7s")
weapon_type = 1
damage = 15
fire_rate = 2.0
range = 150.0
projectile_speed = 300.0
projectile_type = "bullet"

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("6_m8r4d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_8n5m2")